--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<h1>dupa</h1>
+<!DOCTYPE html>
+<HTML>
+    <body>
+        <h1>I wanna tell you about me.</h1>
+            <div style=></div>
+
+
+
+
+    </body>
+</HTML>
