More information in my cv

--- a/index.html
+++ b/index.html
@@ -2,33 +2,74 @@
 <HTML>
     <body>
         <h1>Michał Węgrzynowski - CV</h1>
+                <section>
             <h2>About myself</h2>
                 <ul>Hello, my name is Michal, I am 34 years old. I'm from Poland,in Łódź.I work in production.I wanna change my job.
                     A few months ago I started learning programming.I like it very much. 
                     <br>I would like to expand my knowledge in this field.In addition, I am learning English and I have also started learning German.
                     I am also planning to learn Spanish.</ul>
+                </section>
+                <section>
             <h2>Personal info</h2>
                 <ul>Email: michalwegrzynowski@wp.pl</ul>
                 <ul>Telephone number: 728183081</ul>
-            <h2>Experience</h2>
-                <ul>ZTK Teofilów S.A - Dyer</ul>
-                    <li>04.02.2006-07.08.2008</li>
-                <ul>Windows factory -"Ziemia Obiecana" - Warehouseman</ul>
-                    <li>19.08.2008-12.03.2010</li>
-                <ul>PGP-Polish postal group- Team Leader </ul>
-                    <li>19.03.2010-26.04.2012</li>   
-                <ul>Hutchinson-production worker</ul>  
-                    <li>04.05.2012-30.12.2013</li>
-                <ul>Mini Plant Oxford-production worker</ul>
-                    <li>04.01.2014-26.09.2015</li>
-                <ul>WOJBUD-construction worker</ul> 
-                    <li>03.10.2015-11.12.2017</li>
-                <ul>PPUH WM s.c-production worker</ul>
-                    <li>12.12.2017-28.12.2018</li>
-                <ul>Avient</ul>
-                    <li>07.01.2019-now</li>
-            <h2>Education</h2>
-            <h2>Language</h2>
-            <h2>Hobby</h2>
+                </section>
+                <section>
+                    <h2>Experience</h2>
+                    <span>ZTK Teofilów S.A - Dyer</span>
+                        <ul>
+                            <li>04.02.2006-07.08.2008</li>
+                        </ul>
+                    <span>Windows factory -"Ziemia Obiecana" - Warehouseman</span>
+                        <ul>
+                            <li>19.08.2008-12.03.2010</li> 
+                        </ul> 
+                    <span>PGP-Polish postal group- Team Leader </span>
+                        <ul>
+                            <li>19.03.2010-26.04.2012</li>
+                        </ul>       
+                    <span>Hutchinson-production worker</span> 
+                        <ul>
+                            <li>04.05.2012-30.12.2013</li>
+                        </ul>
+                    <span>Mini Plant Oxford-production worker</span>
+                        <ul>
+                            <li>04.01.2014-26.09.2015</li>
+                        </ul>
+                    <span>WOJBUD-construction worker</span> 
+                        <ul>
+                            <li>03.10.2015-11.12.2017</li>
+                        </ul>
+                    <span>PPUH WM s.c-production worker</span>
+                        <ul>
+                            <li>12.12.2017-28.12.2018</li>
+                        </ul>
+                    <span>Avient</span>
+                        <ul>
+                            <li>07.01.2019-now</li>
+                        </ul>
+                    <h2>Education</h2>
+                </section>
+                <section>
+                    <h2>Language</h2>
+                    <span>
+                        <ul>
+                            <li>English - B1</li>
+                            <li>Polish - Native</li>
+                        </ul>
+                    </span>
+                </section> 
+                <section>   
+                    <h2>Hobby</h2>
+                    <span>
+                        <ul>
+                            <li>Programming</li>
+                            <li>Sport</li>
+                            <li>Music</li>
+                            <li>Traveling</li>
+                            <li>Terraristics</li>
+                        </ul>
+                    </span>
+                </section>    
     </body>
 </HTML>
