--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <HTML>
-    <body>
+    <head>
+        <title>Michał Węgrzynowski - CV</title>
         <h1>Michał Węgrzynowski - CV</h1>
+        <link rel="stylesheet" href="main.css"/>
+        <img src="Michal.jpg" width="200px" height="200px"
+    </head>
+    <body>    
                 <section>
-            <h2>About myself</h2>
+                    <h2>About myself</h2>
                 <ul>Hello, my name is Michal, I am 34 years old. I'm from Poland,in Łódź.I work in production.I wanna change my job.
                     A few months ago I started learning programming.I like it very much. 
                     <br>I would like to expand my knowledge in this field.In addition, I am learning English and I have also started learning German.
                     I am also planning to learn Spanish.</ul>
                 </section>
                 <section>
-            <h2>Personal info</h2>
-                <ul>Email: michalwegrzynowski@wp.pl</ul>
-                <ul>Telephone number: 728183081</ul>
+                    <h2>Personal info</h2>
+                        <ul>Email: michalwegrzynowski@wp.pl</ul>
+                        <ul>Telephone number: 728183081</ul>
                 </section>
                 <section>
                     <h2>Experience</h2>
