--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
         <title>Michał Węgrzynowski - CV</title>
         <h1>Michał Węgrzynowski - CV</h1>
         <link rel="stylesheet" href="main.css"/>
-        <img src="Michal.jpg" width="200px" height="200px"
+        <img src="Michal.jpg">
     </head>
     <body>    
                 <section>
+                        <div>
                     <h2>About myself</h2>
                 <ul>Hello, my name is Michal, I am 34 years old. I'm from Poland,in Łódź.I work in production.I wanna change my job.
                     A few months ago I started learning programming.I like it very much. 
-                    <br>I would like to expand my knowledge in this field.In addition, I am learning English and I have also started learning German.
-                    I am also planning to learn Spanish.</ul>
+                    <br>I would like to expand my knowledge in this field.
+                    In addition, I am learning English and I have also started learning German.
+                    I am also planning to learn Spanish.
+                </ul>
+                        </div>                  
                 </section>
                 <section>
                     <h2>Personal info</h2>
