--- a/index.html
+++ b/index.html
@@ -5,24 +5,50 @@
         <link rel="stylesheet" href="style.css"/>
     </head>
     <body>
-        <img src="Michal.jpg"/>
-        <h1>Michał Węgrzynowski</h1>
-        <span>Pracownik produkcji</span>
-        <p>
-            Mam na imię <b>Michał</b>, programowaniem interesuję się od kilku miesięcy.
-            Obecnie chodzę do liceum, chciałbym się przebranżowić i na poważnie zająć się programowaniem.
-            Dodatkowo uczę się języka Angielskiego a w przyszłości chciałbym opanować język Niemiecki i Hiszpański.
-        </p>
-        <h2>Doświadczenie zawodowe</h2>
-        <ul>
-            <li>2019-obecnie: Avient - Pracownik produkcji</li>
-            <li>2016-2019: WM.sp.zoo - Pracownik produkcji</li>
-        </ul>
-        <h2>Wykształcenie</h2>
-        <ul>
-            <li>2022-obecnie: <a href="https://www.cosinus.pl/lodz">Liceum ogólnokształcące dla dorosłych</a></li>
-            <li>2001-2004: Gimnazjum nr. 25 w Łodzi</li>
-        </ul>
-        <h2>Zainteresowania</h2>
+        <header>
+            <img src="Michal.jpg"/>
+            <h1>Michał Węgrzynowski</h1>
+            <span>Pracownik produkcji</span>
+        </header>
+        <main>
+            <section>
+                <h2>O mnie</h2>
+                <p>
+                    Mam na imię <b>Michał</b>, programowaniem interesuję się od kilku miesięcy.
+                    Obecnie chodzę do liceum, chciałbym się przebranżowić i na poważnie zająć się programowaniem.
+                    Dodatkowo uczę się języka Angielskiego a w przyszłości chciałbym opanować język Niemiecki i Hiszpański.
+                </p>
+            </section>
+            <section>
+                <h2>Doświadczenie zawodowe</h2>
+                <ul>
+                    <li>2019-obecnie: Avient - Pracownik produkcji</li>
+                    <li>2016-2019: WM.sp.zoo - Pracownik produkcji</li>
+                </ul>
+            </section>
+            <section>
+                <h2>Języki</h2>
+                <ul>
+                    <li>Angielski - B1</li>
+                    <li>Polski - ojczysty</li>
+                </ul>
+            </section>
+            <section>
+                <h2>Wykształcenie</h2>
+                <ul>
+                    <li>2022-obecnie: <a href="https://www.cosinus.pl/lodz">Liceum ogólnokształcące dla dorosłych</a></li>
+                    <li>2001-2004: Gimnazjum nr. 25 w Łodzi</li>
+                </ul>
+            </section>
+            <section>
+                <h2>Zainteresowania</h2>
+                <ul>
+                    <li>Terrarystyka</li>
+                    <li>Piłka nożna</li>
+                    <li>Muzyka</li>
+                    <li>Kino</li>
+                </ul>
+            </section>
+        </main>
     </body>
 </html>
