zmiany,zmiany,zmiany

--- a/index.html
+++ b/index.html
@@ -7,8 +7,18 @@
     <body>
         <header>
             <img src="Michal.jpg"/>
-            <h1>Michał Węgrzynowski</h1>
-            <span>Pracownik produkcji</span>
+            <div>
+                <h1>Michał Węgrzynowski</h1>
+                <span>Pracownik produkcji</span>
+            </div>
+            <address>
+                <ul>
+                    <li>Numer telefonu: 728 183 081</li>
+                    <li>Email: michalwegrzynowski@wp.pl</li>
+                    <li>Data urodzenia: 22-04-1988</li>
+                    <li>Miejsce zamieszkania: Łódź</li>
+                </ul>
+            </address>
         </header>
         <main>
             <section>
