--- a/index.html
+++ b/index.html
@@ -5,60 +5,78 @@
         <link rel="stylesheet" href="style.css"/>
     </head>
     <body>
-        <header>
-            <img src="Michal.jpg"/>
-            <div>
-                <h1>Michał Węgrzynowski</h1>
-                <span>Pracownik produkcji</span>
-            </div>
-            <address>
-                <ul>
-                    <li>Numer telefonu: 728 183 081</li>
-                    <li>Email: michalwegrzynowski@wp.pl</li>
-                    <li>Data urodzenia: 22-04-1988</li>
-                    <li>Miejsce zamieszkania: Łódź</li>
-                </ul>
-            </address>
-        </header>
-        <main>
-            <section>
-                <h2>O mnie</h2>
-                <p>
-                    Mam na imię <b>Michał</b>, programowaniem interesuję się od kilku miesięcy.
-                    Obecnie chodzę do liceum, chciałbym się przebranżowić i na poważnie zająć się programowaniem.
-                    Dodatkowo uczę się języka Angielskiego a w przyszłości chciałbym opanować język Niemiecki i Hiszpański.
-                </p>
-            </section>
-            <section>
-                <h2>Doświadczenie zawodowe</h2>
-                <ul>
-                    <li>2019-obecnie: Avient - Pracownik produkcji</li>
-                    <li>2016-2019: WM.sp.zoo - Pracownik produkcji</li>
-                </ul>
-            </section>
-            <section>
-                <h2>Języki</h2>
-                <ul>
-                    <li>Angielski - B1</li>
-                    <li>Polski - ojczysty</li>
-                </ul>
-            </section>
-            <section>
-                <h2>Wykształcenie</h2>
-                <ul>
-                    <li>2022-obecnie: <a href="https://www.cosinus.pl/lodz">Liceum ogólnokształcące dla dorosłych</a></li>
-                    <li>2001-2004: Gimnazjum nr. 25 w Łodzi</li>
-                </ul>
-            </section>
-            <section>
-                <h2>Zainteresowania</h2>
-                <ul>
-                    <li>Terrarystyka</li>
-                    <li>Piłka nożna</li>
-                    <li>Muzyka</li>
-                    <li>Kino</li>
-                </ul>
-            </section>
-        </main>
+        <div class="container">
+            <header>
+                <img class="profile-picture circle" src="Michal.jpg"/>
+                <div>
+                    <h1>Michał Węgrzynowski</h1>
+                    <span>Pracownik produkcji</span>
+                </div>
+                <address>
+                    <ul>
+                        <li><img class="address-icon circle" src="images/phone.png"/><b>Numer telefonu</b>: 728 183 081</li>
+                        <li><img class="address-icon circle" src="images/mail.png"/><b>Email:</b> <a href="mailto:michalwegrzynowski@wp.pl"> michalwegrzynowski@wp.pl</a></li>
+                        <li><img class="address-icon circle" src="images/birthday-cake.png"/><b>Data urodzenia</b>: 22-04-1988</li>
+                        <li><img class="address-icon circle" src="images/pin.png"/><b>Miejsce zamieszkania</b>: Łódź</li>
+                    </ul>
+                </address>
+            </header>
+            <main>
+                <section>
+                    <h2>O mnie</h2>
+                    <p>
+                        Mam na imię <b>Michał</b>, programowaniem interesuję się od kilku miesięcy.
+                        Obecnie chodzę do liceum, chciałbym się przebranżowić i na poważnie zająć się programowaniem.
+                        Dodatkowo uczę się języka Angielskiego a w przyszłości chciałbym opanować język Niemiecki i Hiszpański.
+                    </p>
+                </section>
+                <section>
+                    <h2>Doświadczenie zawodowe</h2>
+                    <ul>
+                        <li>2019-obecnie: Avient - Pracownik produkcji</li>
+                        <li>2016-2019: WM.sp.zoo - Pracownik produkcji</li>
+                    </ul>
+                </section>
+                <section>
+                    <h2>Języki</h2>
+                    <ul>
+                        <li>Angielski - B1</li>
+                        <li>Polski - ojczysty</li>
+                    </ul>
+                </section>
+                <section>
+                    <h2>Wykształcenie</h2>
+                    <ul>
+                        <li>2022-obecnie: <a href="https://www.cosinus.pl/lodz">Liceum ogólnokształcące dla dorosłych</a></li>
+                        <li>2001-2004: Gimnazjum nr. 25 w Łodzi</li>
+                    </ul>
+                </section>
+                <section>
+                    <h2>Zainteresowania</h2>
+                    <ul class="hobbies">
+                        <li><img src="images/fish.png"/>
+                            <div>
+                                <h3>Terrarystyka</h3>
+                            </div>
+                        </li>
+                        <li><img src="images/football.png"/>
+                            <div>
+                                <h3>Piłka nożna</h3>
+                            </div>
+                        </li>
+                        <li><img src="images/music.png"/>
+                            <div>
+                                <h3>Muzyka</h3>
+                            </div>
+                        </li>
+                        <li><img src="images/movie.png"/>
+                            <div>
+                                <h3>Kino</h3>
+                            </div>
+                        </li>
+                    </ul>
+                </section>
+            </main>
+        </div>
     </body>
 </html>
