--- a/index.html
+++ b/index.html
@@ -1,16 +1,29 @@
-<h1>Michał Węgrzynowski</h1>
-<span>Frontend Developer</span>
-<p>
-    Mam na imę <b>Michał</b>.Mam 35 lat.
-    Nauką programowania zajmuję się od niedawna.
-    Obecnie chodzę do liceum.Jestem na trzecim semestrze.
-    Uczę się języka angielskiego i niemieckiego.
-    W przyszłości chciałbym znaleźć pracę związaną z programowaniem.
-</p>
-<h2>Doświadczenie zawodowe</h2>
-<ul>
-<li>2019-obecnie: Avient - Pracownik produkcji</li>
-<li>2017-2019: WM sp.z.o.o - Pracownik produkcji</li>
-</ul>
-<h2>Wykształcenie</h2>
-<h2>Zainteresowania</h2>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Michał Węgrzynowski - cv</title>
+        <link rel="stylesheet" href="style.css"/>
+    </head>
+    <body>
+        <img src="Michal.jpg">
+        <h1>Michał Węgrzynowski</h1>
+        <span>Frontend Developer</span>
+        <p>
+            Mam na imę <b>Michał</b>.Mam 35 lat.
+            Nauką programowania zajmuję się od niedawna.
+            Obecnie chodzę do liceum.Jestem na trzecim semestrze.
+            Uczę się języka angielskiego i niemieckiego.
+            W przyszłości chciałbym znaleźć pracę związaną z programowaniem.
+        </p>
+        <h2>Doświadczenie zawodowe</h2>
+        <ul>
+            <li>2019-obecnie: Avient - Pracownik produkcji</li>
+            <li>2017-2019: WM sp.z.o.o - Pracownik produkcji</li>
+        </ul>
+        <h2>Wykształcenie</h2>
+        <ul>
+            <li>2021-obecnie: <a href="https://www.cosinus.pl/"> Liceum ogólnokształcące dla dorosłych cosinus </a></li>
+        </ul>
+        <h2>Zainteresowania</h2>
+    </body>
+</html>
