--- a/index.html
+++ b/index.html
@@ -1,55 +1,69 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Michał Węgrzynowski - cv</title>
-        <link rel="stylesheet" href="style.css"/>
-    </head>
-    <body>
-        <header>
-            <img src="Michal.jpg">
+
+<head>
+    <title>Michał Węgrzynowski - cv</title>
+    <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+    <header>
+        <img src="Michal.jpg">
+        <div>
             <h1>Michał Węgrzynowski</h1>
             <span>Frontend Developer</span>
-        </header>
-        <main>
-            <section>
-                <h2>O mnie</h2>
-                <p>
-                    Mam na imę <b>Michał</b>.Mam 35 lat.
-                    Nauką programowania zajmuję się od niedawna.
-                    Obecnie chodzę do liceum dla dorosłych.Jestem na trzecim semestrze.
-                    Uczę się języka angielskiego i niemieckiego.
-                    W przyszłości chciałbym znaleźć pracę związaną z programowaniem.
-                </p>
-            </section>
-            <section>
-                <h2>Doświadczenie zawodowe</h2>
-                <ul>
-                    <li>2019-obecnie: Avient - Pracownik produkcji</li>
-                    <li>2017-2019: WM sp.z.o.o - Pracownik produkcji</li>
-                </ul>
-            </section>
-            <section>
-                <h2>Języki</h2>
-                <ul>
-                    <li>Angielski - B1</li>
-                    <li>Niemiecki - A1</li>
-                    <li>Polski - Ojczysty</li>
-                </ul>
-            </section>
-            <section>
-                <h2>Wykształcenie</h2>
-                <ul>
-                    <li>2021-obecnie: <a href="https://www.cosinus.pl/"> Liceum ogólnokształcące dla dorosłych cosinus </a></li>
-                </ul>
-            </section>
-            <section>
-                <h2>Zainteresowania</h2>
-                <ul>
-                    <li>Kino</li>
-                    <li>Terrarystyka</li>
-                    <li>Nauka języków obcych</li>
-                </ul>
-            </section>
-        </main>
-    </body>
+        </div>
+        <address>
+            <ul>
+                <li><b>Numer telefonu:</b> 728 183 081</li>
+                <li><b>Email:</b>michalwegrzynowski@wp.pl</li>
+                <li><b>Data urodzenia:</b> 22-04-1988</li>
+                <li><b>Miejsce zamieszkania:</b> Łódź</li>
+            </ul>
+        </address>
+    </header>
+    <main>
+        <section>
+            <h2>O mnie</h2>
+            <p>
+                Mam na imę <b>Michał</b>.Mam 35 lat.
+                Nauką programowania zajmuję się od niedawna.
+                Obecnie chodzę do liceum dla dorosłych.Jestem na trzecim semestrze.
+                Dodatkowo uczę się języka angielskiego i niemieckiego.
+                W przyszłości chciałbym znaleźć pracę związaną z programowaniem.
+            </p>
+        </section>
+        <section>
+            <h2>Doświadczenie zawodowe</h2>
+            <ul>
+                <li>2019-obecnie: Avient - Pracownik produkcji</li>
+                <li>2017-2019: WM sp.z.o.o - Pracownik produkcji</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Języki</h2>
+            <ul>
+                <li>Angielski - B1</li>
+                <li>Niemiecki - A1</li>
+                <li>Polski - Ojczysty</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Wykształcenie</h2>
+            <ul>
+                <li>2021-obecnie: <a href="https://www.cosinus.pl/"> Liceum ogólnokształcące dla dorosłych cosinus </a>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>Zainteresowania</h2>
+            <ul>
+                <li>Kino</li>
+                <li>Terrarystyka</li>
+                <li>Nauka języków obcych</li>
+            </ul>
+        </section>
+    </main>
+</body>
+
 </html>
