--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
         </div>
         <address>
             <ul>
-                <li><b>Numer telefonu:</b> 728 183 081</li>
-                <li><b>Email:</b>michalwegrzynowski@wp.pl</li>
-                <li><b>Data urodzenia:</b> 22-04-1988</li>
-                <li><b>Miejsce zamieszkania:</b> Łódź</li>
+                <li><img src="images/phone.png" /><b>Numer telefonu:</b> 728 183 081
+                </li>
+                <li><img src="images/mail.png" /><b>Email:</b>michalwegrzynowski@wp.pl</li>
+                <li><img src="images/birthday-cake.png" /><b>Data urodzenia:</b> 22-04-1988</li>
+                <li><img src="images/pin.png" /><b>Miejsce zamieszkania:</b> Łódź</li>
             </ul>
         </address>
     </header>
